# ivm-apps

./: .gitignore  Dockerfile  Makefile.am  README.org  benchmarking.sh  build-apps.sh  build-libs.sh  build.sh  clean.sh  configure.ac  create-human-readable-section.sh  dev.sh  install-libs-with-ssh.sh  install-libs.sh  setup.sh
afs/: afsutil.c  afsutil.h
app/: Makefile.am  app.c  app.h  create-human-readable-app.sh  fix-and-run.sh  main.c  settings.h
boot/: Makefile.am  inputdevice.c  main.c
initial-program/: Makefile.am  README.md  inputdevice.c  inputdevice.h  main.c  settings.h
ivm_formats/: ivm_format_jpeg.c  ivm_format_jpeg.h  ivm_format_pdf.c  ivm_format_pdf.h  ivm_format_siard.c  ivm_format_siard.h  ivm_format_siard_test.c  ivm_format_siard_test.sh  ivm_format_tiff.c  ivm_format_tiff.h  ivm_format_zlib.c  ivm_format_zlib.h  ivm_formats.c  ivm_formats.h
ivm_io/: Makefile  ex_image_input.c  ex_image_output.c  ex_image_output_standalone.c  ivm_io.c  ivm_io.h
ivm_xz/: Makefile  Makefile.am  README  boot_test.c  decompress.c  decompress.h  gen_input  initial-program.org  input.h  ivmboot.b  mix.s  output.h  self_extract.c  trivlib.c  trivlib.h  uncompress.c  uncompress.h  xz.h  xz_config.h  xz_dec_stream.c
ivm_zlib/: .gitignore  Makefile  b2data.sh  build-zlib.sh  driver.c  echo.s  mix.s  mix_payload.s  payload.c  print_bar.c  print_foo.s  test_compress.c  test_uncompress.c
static_tests_gui/: index.html  main.js  package.json
tests/boxing_config/: Makefile.am  main.c
tests/static_jpeg/: Makefile.am  main.c
tests/static_pdf/: Makefile.am  main.c
tests/static_tiff/: Makefile.am  README.txt  main.c
tests/static_wav/: build.sh  main.c
